# tableTopSystem

3D_files/: acrulic_cells_top.blend  chessPiece_01.blend  chessPiece_01_bot.stl  chessPiece_02.blend  chessPiece_02.blend1  chessPiece_03.blend  chessPiece_03.blend1  chessPiece_04.blend  chessPiece_04.blend1  chessPiece_04_01.stl  chessPiece_05.blend  chessPiece_05.blend1  chessPiece_05_01.stl  chessPiece_05_02.stl  chessPiece_06.blend1  chessPiece_final_01.blend1
cameraCalibration/: calibrate.py  takeImages.py
checkersEngine/: .#Move.h  AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  CheckersBoard.cpp  CheckersBoard.h  CheckersBoardNode.h  Move.h  Piece.h  Pos.h  engine.cpp  test.py
imageRecognition/: .#stampFuncs.py  misc.py  stampFuncs.py  stampFuncsOptimized.py
old/: README.md
php_comm/: generate_frames.py
resources/: asci_symbols_reg_small
src/: .#ImageRecognition.py  .#main.py  .#misc.py  .#perspectiveTest.py  .#sim.py  .#testImageRecognition.py  .sim_data.json.swp  Graphics.py  ImageRecognition.py  alexCode.py  cameraExposureControl.sh  main.py  misc.py  perspectiveTest.py  ponder  run.sh  runNew.sh  sharedVars.py  sim.py  sim_data.json  sim_data_checkersBoard.json  testImageRecognition.py  test_projector.html
stampGeneration/: .#randomWalkStamp.py  .#stampGenerator.py  generate.py  generateStamps1.py  generatorNumbers.py  numberGenerator.py  randomWalkStamp.py  stampGenerator.py
stampRecognition/: orbTest.py  recognize.py  stampRecognize.py  test.py
tests/: .#hsvLevels.py  .#labLevels.py  fps.py  fps_demo.py  fps_thread_demo.py  hsvLevels.py  (+6 more)
(+55 files in other folders)
